<resources>
    <string name="sessions">Sessions</string>
    <string name="app_name" translatable="false">OpenEvent</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="have_an_account_question">Have an account? Login</string>
    <string name="new_here_question">New here? Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_confirmation">Do you want to save your changes?</string>
    <string name="discard">Discard</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="avatar">Avatar</string>
    <string name="transition_speaker_to_activity">transit_speaker</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_enter_valid_email">Enter a valid email</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_length">Password must be atleast 6 characters</string>
    <string name="error_confirm_password">Confirm password here</string>
    <string name="error_password_not_matching">Password not matching</string>
    <string name="error_in_signing_up">Error in signing up</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="error_updating_data">Error updating data</string>
    <string name="error_uploading_image">Error uploading image</string>
    <string name="error_changing_password">Error changing password</string>
    <string name="error_password_not_correct">Incorrect password</string>
    <string name="error_password_empty">Error, Cannot set empty password</string>
    <string name="ok">OK</string>
    <string name="discount_code_value">Value : %1$f</string>
    <string name="discount_code_min_quantity">Minimum Quantity : %1$d</string>
    <string name="discount_code_max_quantity">Maximum Quantity : %1$d</string>
    <string name="menu_feedback">Feedbacks</string>
    <string name="error_posting_feedback">Error Posting!</string>
    <string name="success_posting_feedback">Successfully Posted!</string>
    <string name="logged_in_successfully">Successfully logged in</string>
    <string name="logged_out_successfully">Successfully logged out</string>
    <string name="signed_up_successfully">Successfully signed up</string>
    <string name="updated_succesfully">Successfully updated info</string>
    <string name="password_changed_successfully">Successfully changed password</string>
    <string name="title_activity_user_profile">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_section_tracks">Tracks</string>
    <string name="title_section_speakerlist">Speakers</string>
    <string name="title_section_location">Locations</string>
    <string name="item_track">This is a track symbol.</string>
    <string name="session_bookmark_status">This image shows the session bookmark status.</string>
    <string name="session_speaker_icon">This is the speaker icon.</string>
    <string name="session_share_icon">This is the share icon.</string>
    <string name="session_calender_icon">This is a calendar icon.</string>
    <string name="session_clock_icon">This is a clock icon.</string>
    <string name="session_location_icon">This is a location icon.</string>
    <string name="downloading_format">Downloading %s…</string>
    <string name="downloaded_format">Downloaded %s…</string>
    <string name="event_info">Event Info</string>
    <string name="session_types">Session Types</string>
    <string name="discount_code">Discount Codes</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_home">Home</string>
    <string name="menu_feed">Live Feed</string>
    <string name="menu_twitter">Twitter Feed</string>
    <string name="menu_tracks">Tracks</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_sponsor">Sponsors</string>
    <string name="menu_map">Map</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About us</string>
    <string name="session">Session Detail</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_notification">Notifications</string>
    <string name="descriptionEmpty">Description: To be updated soon</string>
    <string name="menu_faqs">FAQs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="settings_mode_download">Download updates only on WiFi</string>
    <string name="summary_mode_download">If on app will not use Mobile Data to update Schedule</string>
    <string name="download_mode_key">internet_mode</string>
    <string name="notification_interval_title">Notification Interval Time</string>
    <string name="settings_mode_notification"> Notification Mode</string>
    <string name="default_mode_notification">10 mins</string>
    <string name="notification_key">notification</string>
    <string name="settings_mode_timezone"> Show Local Times</string>
    <string name="summary_mode_timezone">Use your local time instead of the Conference\'s Local Time</string>
    <string name="timezone_mode_key">timezone_mode</string>
    <string name="language_preferences">Language Preferences</string>
    <string name="change_language">Change Your Language</string>
    <string name="language_key">change_language</string>
    <string name="default_mode_language">English</string>
    <string name="linkedin" translatable="false">linkedin</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="fb" translatable="false">fb</string>
    <string name="github" translatable="false">github</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="upcoming">Upcoming</string>
    <string name="ticket">Get Tickets</string>
    <string name="global_search_hint">Search App</string>
    <string name="search_hint_tracks"> Search Tracks</string>
    <string name="refresh_failed">Couldn\'t Refresh</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_complete">Download Done</string>
    <string name="share_links">Sharing URL</string>
    <string name="time_not_specified">Timings not specified</string>
    <string name="no_results">No Results</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="net_unavailable">Network not available</string>
    <string name="turn_on">Turn on WiFi or Mobile data in Settings</string>
    <string name="error">Error</string>
    <string name="http_error">HTTP Error</string>
    <string name="api_not_found">API Not Found</string>
    <string name="invalid_track">Invalid track</string>
    <string name="empty_list">No Bookmarks Available</string>
    <string name="bullet">"•"</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_upcoming_ongoing">"No upcoming/ongoing sessions in this track</string>
    <string name="subject">Speaker profile</string>
    <string name="message_1"> is speaking at </string>
    <string name="message_2"> on the topics: </string>
    <string name="message_3"> For more information checkout this app on google play store: </string>
    <string name="fmt_floor">"Floor: "</string>
    <string name="noBookmark">No bookmarked session yet !!</string>
    <string name="invalid_url">Invalid Url</string>
    <string name="dialog_error_title">Error</string>
    <string name="website">website</string>
    <string name="menu_speaker_sort">Sort</string>
    <string name="dialog_sort_title">Sort By</string>
    <string name="dialog_filter_title">Filter by</string>
    <string name="dialog_sort_by_organisation">Organisation</string>
    <string name="dialog_sort_by_country">Country</string>
    <string name="dialog_sort_by_speaker_name">Speaker Name</string>
    <string name="dialog_sort_by_title">Title</string>
    <string name="dialog_sort_by_tracks">Tracks</string>
    <string name="dialog_sort_by_start_time">Start Time</string>
    <string name="image_view" translatable="false">Image View</string>
    <string name="launcher_icon" translatable="false">Launcher Icon</string>
    <string name="sponsor_image" translatable="false">Sponsor Image</string>
    <string name="header_image" translatable="false">Header Image</string>
    <string name="speaker_image" translatable="false">Speaker\'s Image</string>
    <string name="logo_widget" translatable="false">Logo Widget</string>
    <string name="backdrop_image" translatable="false">Backdrop Image</string>
    <string name="linkedin_icon" translatable="false">Linkedin Icon</string>
    <string name="twitter_icon" translatable="false">Twitter Icon</string>
    <string name="facebook_icon" translatable="false">Facebook Icon</string>
    <string name="github_icon" translatable="false">Github Icon</string>
    <string name="web_icon" translatable="false">Web Icon</string>
    <string name="download_assets">Do you want to update to the latest schedule now?</string>
    <string name="internet_preference_warning">Wifi Not available, do you want to display offline schedule? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noSessions">No Sessions yet!</string>
    <string name="noMicrolocations">No Microlocations yet!</string>
    <string name="noSchedule">No Schedule yet!</string>
    <string name="noSpeakers">No Speakers yet!</string>
    <string name="noSponsors">No Sponsors yet!</string>
    <string name="noTracks">No Tracks yet!</string>
    <string name="noFeed">No Posts yet!</string>
    <string name="no_notification">No notifications yet!</string>
    <string name="no_faqs">No faqs yet!</string>
    <string name="charges_warning">Data charges may apply</string>
    <string name="tracks">Track</string>
    <string name="type">Type</string>
    <string name="dot_session">:&#160;</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="location">Location</string>
    <string name="speakers">Speaker</string>
    <string name="upcoming_sess">Upcoming session: </string>
    <string name="copyright">Copyright</string>
    <string name="call_for_speakers">Call For Speakers</string>
    <string name="download_latest_data">Download Latest Data</string>
    <string name="speakers_bio">About me</string>
    <string name="social_media">Social media</string>
    <string name="sessions_title_card">Sessions</string>
    <string name="twitter_feed">Twitter Feed</string>
</resources>