<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_user_profile">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_account_circle_grey_24dp"
            android:title="@string/login"
            app:showAsAction="always" />
    </group>

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_notification"
            android:checked="true"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notification" />

        <item
            android:id="@+id/nav_feed"
            android:checked="true"
            android:icon="@drawable/ic_feed_black_24dp"
            app:showAsAction="always"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_twitter_feed"
            android:icon="@drawable/ic_feed_black_24dp"
            app:showAsAction="always"
            android:title="@string/twitter_feed" />
        <item
            android:id="@+id/nav_tracks"
            android:checked="true"
            android:icon="@drawable/ic_event_white_24dp"
            app:showAsAction="always"
            android:title="@string/menu_tracks" />
        <item
            android:id="@+id/nav_schedule"
            android:checked="true"
            android:icon="@drawable/ic_schedule_grey600_24dp"
            app:showAsAction="always"
            android:title="@string/menu_schedule" />


        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_people_black_24dp"
            app:showAsAction="always"
            android:title="@string/menu_speakers" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_sponsors_white_24dp"
            app:showAsAction="always"
            android:title="@string/menu_sponsor" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_24dp"
            app:showAsAction="always"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_location_on_black_24dp"
            app:showAsAction="always"
            android:title="@string/menu_locations" />

        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_question_answer_black_24dp"
            app:showAsAction="always"
            android:title="@string/menu_faqs" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            app:showAsAction="always"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_24dp"
            app:showAsAction="always"
            android:title="@string/menu_share" />

    </group>

</menu>