<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search_home"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ticket_home"
        android:icon="@drawable/ic_ticket_white_24dp"
        android:title="@string/ticket"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/copyright"
        android:id="@+id/action_display_copyright_dialog"/>
    <item
        android:title="@string/call_for_speakers"
        android:id="@+id/action_display_speakers_call_dialog"/>
    <item
        android:title="@string/download_latest_data"
        android:id="@+id/action_download_latest_data"/>
</menu>