<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_group_location_activity">
        <item
            android:id="@+id/action_search_tracks_location"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />

        <item
            android:id="@+id/action_map_location"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/menu_map"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
                android:id="@+id/upcoming_sessions"
                android:icon="@drawable/ic_timeline_white_24dp"
                android:title="@string/upcoming"
                app:showAsAction="ifRoom|collapseActionView"
                app:actionViewClass="android.support.v7.widget.Button"/>
    </group>
</menu>