<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/session_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:transitionName="@string/transition_speaker_to_activity">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_image_view_extra_large"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/speaker_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/speaker_view_scrim_top"
                    android:background="@drawable/scrim_top" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/speaker_view_scrim_bottom"
                    android:layout_gravity="bottom"
                    android:background="@drawable/scrim_bottom" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_speakers"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:id="@+id/speaker_details_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_extra_large"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/layout_margin_extra_large"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/speaker_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_extra_large"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/heading_text_size"
                    android:textStyle="bold"
                    tools:targetApi="jelly_bean"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/speaker_details_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin_extra_large"
                    android:layout_marginRight="@dimen/layout_margin_extra_large"
                    android:paddingBottom="@dimen/padding_small"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_large"
                    tools:text="Subtitle" />

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/infoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:id="@+id/speaker_bio_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:layout_marginStart="@dimen/layout_margin_medium"
                android:layout_marginTop="@dimen/layout_margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_speaker_bio_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_margin_medium"
                        android:layout_marginTop="@dimen/layout_margin_medium"
                        android:padding="@dimen/padding_medium"
                        android:text="@string/speakers_bio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/speaker_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/padding_medium"
                        android:paddingLeft="@dimen/padding_medium"
                        android:paddingRight="@dimen/padding_medium"
                        android:paddingStart="@dimen/padding_medium"
                        tools:text="Paresh Mayani, Technical Lead @ Android" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/layoutSocialMediaCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speaker_bio_card"
                android:layout_marginEnd="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:layout_marginStart="@dimen/padding_medium"
                android:layout_marginTop="@dimen/layout_margin_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_speaker_social_media_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin_medium"
                        android:padding="@dimen/padding_medium"
                        android:text="@string/social_media"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                    <LinearLayout
                        android:id="@+id/layoutSocialMedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView_fb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/facebook_icon"
                            android:padding="@dimen/padding_medium"
                            android:tag="@string/fb"
                            app:srcCompat="@drawable/ic_facebook_24dp"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/imageView_linkedin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/linkedin_icon"
                            android:padding="@dimen/padding_medium"
                            android:tag="@string/linkedin"
                            app:srcCompat="@drawable/ic_linkedin_24dp"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/imageView_twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/twitter_icon"
                            android:padding="@dimen/padding_medium"
                            android:tag="@string/twitter"
                            app:srcCompat="@drawable/ic_twitter_24dp"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/imageView_github"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/github_icon"
                            android:padding="@dimen/padding_medium"
                            android:tag="@string/github"
                            app:srcCompat="@drawable/ic_github_24dp"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/imageView_web"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:contentDescription="@string/web_icon"
                            android:padding="@dimen/padding_medium"
                            android:tag="@string/website"
                            app:srcCompat="@drawable/ic_domain_black_24dp"
                            android:visibility="gone"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_speaker_seminar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSocialMediaCard"
                android:layout_marginEnd="@dimen/padding_medium"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:layout_marginStart="@dimen/padding_medium"
                android:layout_marginTop="@dimen/layout_margin_medium"
                android:padding="@dimen/padding_medium"
                android:text="@string/sessions_title_card"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tv_speaker_seminar_title">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_speakers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/tracksactvity_item" />

                <TextView
                    android:id="@+id/txt_no_sessions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/noSessions"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/secondary_text" />

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>